# voxelizer

./: CMakeLists.txt  readme.md
examples/bunny/: bunny64
examples/house/: house.mtl  house64
include/voxelizer/: bbox.hpp  color.hpp  flood_fill.hpp  index.hpp  obj.hpp  sampler.hpp  scene.hpp  sequence.hpp  texture.hpp
source/: bbox.cpp  flood_fill.cpp  index.cpp  main.cpp  obj.cpp  sampler.cpp
